fix slider arrows on safari

--- a/portal/css/mediaOTHER.css
+++ b/portal/css/mediaOTHER.css
@@ -226,15 +226,11 @@ font-weight: 800;
 	#jqxslider {
     width: 30em !important;
     margin-left:auto; margin-right: auto;
-    margin-top: 1.3em;
-    margin-bottom: 1.3em !important;
 	}
 
 	#jqxslider2 {
     width: 30em !important;
     margin-left:auto; margin-right: auto;
-    margin-top: 1.3em;
-    margin-bottom: 1.3em !important;
 	}
 
 }
